[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
colored = "2.1.0"
unicode-segmentation = "1.11.0"

# Specify optimisation levels for different profiles
# 0 = no optimisation
# 3 = full optimisation
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
